--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>device-width
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Vrishank Raina</title>
@@ -8,7 +8,7 @@
 <body>
     <h1> Html project</h1>
 
-    <p>Hello World</p>
+    <p>Hello World!!!!!</p>
     
 </body>
 </html>
